add google code prettify to highglight code

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,4 +26,12 @@ layout: default
   </script>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
+  <script src="/exts/google-code-prettify/prettify.js"></script>
+  <script src="/exts/jquery/jquery-1.11.3.min.js"></script>
+<script type="text/javascript">
+  $(function(){
+              $("pre").addClass("prettyprint linenums");
+                  prettyPrint();
+              });
+</script>
 </div>
