change line wrap rule in the pre code block and some minor adjustment to line number

--- a/exts/google-code-prettify/sons-of-obsidian.css
+++ b/exts/google-code-prettify/sons-of-obsidian.css
@@ -52,11 +52,13 @@
 pre.prettyprint
 {
     border: 0px solid #888;
+    white-space: pre-wrap;
 }
 ol.linenums
 {
     margin-top: 0;
     margin-bottom: 0;
+    padding-left: 1em; /* for the possible 3-digit line number */
 }
 .prettyprint {
     background: #000;
